force-app/main/default/objects/Placement__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>IF( Internal_Placement__c =NULL, Main_Opportunity__r.AccountId, $Setup.Torc_Constants__c.Torc_Account__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>