force-app/main/default/objects/Placement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(
 (Forecast_Start__c-6)  &lt;=TODAY(),
Forecast_End__c &gt;=TODAY(),
Total_Price__c &lt;&gt;0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>