force-app/main/default/objects/Placement__c/fields/Churn_Notes__c.field-meta.xml
<CustomField>
    <fullName>Churn_Notes__c</fullName>
    <label>Churn Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>