force-app/main/default/objects/Placement__c/fields/Churn_Type__c.field-meta.xml
<CustomField>
    <fullName>Churn_Type__c</fullName>
    <formula>IF( Explicit_Placement_Complete__c ,&apos;Placement Completed&apos;,
IF( Hired_By_Customer__c,&apos;Hired By Customer&apos;,
IF( Latest_Opportunity__r.Amount &lt;0, TEXT(Latest_Opportunity__r.Debooking_Reason__c) ,&apos;Placement Completed&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Churn Type</label>
    <type>Text</type>
</CustomField>