force-app/main/default/objects/Placement__c/fields/DBD__c.field-meta.xml
<CustomField>
    <fullName>DBD__c</fullName>
    <formula>Latest_Opportunity__r.DBD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DBD</label>
    <type>Text</type>
</CustomField>