force-app/main/default/objects/Placement__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>