force-app/main/default/objects/Placement__c/fields/Developer_Engagement_Condition__c.field-meta.xml
<CustomField>
    <fullName>Developer_Engagement_Condition__c</fullName>
    <label>Developer Engagement Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>