force-app/main/default/objects/Placement__c/fields/EOR__c.field-meta.xml
<CustomField>
    <fullName>EOR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EOR(Do Not use)</label>
    <type>Checkbox</type>
</CustomField>