force-app/main/default/objects/Placement__c/fields/EOR_Or_IC__c.field-meta.xml
<CustomField>
    <fullName>EOR_Or_IC__c</fullName>
    <formula>TEXT(Latest_Opportunity__r.EOR_Or_IC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Type</label>
    <type>Text</type>
</CustomField>