force-app/main/default/objects/Placement__c/fields/Exclude__c.field-meta.xml
<CustomField>
    <fullName>Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude</label>
    <type>Checkbox</type>
</CustomField>