force-app/main/default/objects/Placement__c/fields/Explicit_Placement_Complete__c.field-meta.xml
<CustomField>
    <fullName>Explicit_Placement_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Explicit Placement Complete</label>
    <type>Checkbox</type>
</CustomField>