force-app/main/default/objects/Placement__c/fields/First_Engagement_Start__c.field-meta.xml
<CustomField>
    <fullName>First_Engagement_Start__c</fullName>
    <formula>IF(Internal_Placement__c&lt;&gt;NULL, Internal_Placement__r.Engagement_Start_Date__c,
First_LineItem__r.Engagement_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Engagement Start</label>
    <type>Date</type>
</CustomField>