force-app/main/default/objects/Placement__c/fields/First_LineItem__c.field-meta.xml
<CustomField>
    <fullName>First_LineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First LineItem</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>Placements1</relationshipName>
    <type>Lookup</type>
</CustomField>