force-app/main/default/objects/Placement__c/fields/First_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>First_Working_Day__c</fullName>
    <label>First Working Day</label>
    <summarizedField>Placement_Forecast__c.Engagement_Start__c</summarizedField>
    <summaryFilterItems>
        <field>Placement_Forecast__c.Engagement_Start__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Placement_Forecast__c.Default_Hours_Week__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Placement_Forecast__c.Placement__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>