force-app/main/default/objects/Placement__c/fields/For_Internal_Placement__c.field-meta.xml
<CustomField>
    <fullName>For_Internal_Placement__c</fullName>
    <formula>Internal_Placement__c &lt;&gt;NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For Internal Placement</label>
    <type>Checkbox</type>
</CustomField>