force-app/main/default/objects/Placement__c/fields/Forecast_End__c.field-meta.xml
<CustomField>
    <fullName>Forecast_End__c</fullName>
    <label>Forecast End</label>
    <summarizedField>Placement_Forecast__c.Week_Ending_Date__c</summarizedField>
    <summaryForeignKey>Placement_Forecast__c.Placement__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>