force-app/main/default/objects/Placement__c/fields/Forecast_Start__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Start__c</fullName>
    <label>Forecast Start</label>
    <summarizedField>Placement_Forecast__c.Week_Start_Date__c</summarizedField>
    <summaryForeignKey>Placement_Forecast__c.Placement__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>