force-app/main/default/objects/Placement__c/fields/Forecasted_Budget__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Budget__c</fullName>
    <label>Forecasted Budget</label>
    <summarizedField>Placement_Forecast__c.Bill_Rate__c</summarizedField>
    <summaryForeignKey>Placement_Forecast__c.Placement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>