force-app/main/default/objects/Placement__c/fields/Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>Friendly_Name__c</fullName>
    <formula>First_Name__c +&apos; &apos;+ Last_Name__c +&apos;-&apos;+ IF(Main_Opportunity__c&lt;&gt;NULL,Main_Opportunity__r.Name,IPC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Friendly Name</label>
    <type>Text</type>
</CustomField>