force-app/main/default/objects/Placement__c/fields/Hired_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Hired_By_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hired By Customer?</label>
    <type>Checkbox</type>
</CustomField>