force-app/main/default/objects/Placement__c/fields/Hired_By_RD__c.field-meta.xml
<CustomField>
    <fullName>Hired_By_RD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hired By RD</label>
    <type>Checkbox</type>
</CustomField>