force-app/main/default/objects/Placement__c/fields/Internal_Placement_Category__c.field-meta.xml
<CustomField>
    <fullName>Internal_Placement_Category__c</fullName>
    <formula>TEXT(Internal_Placement__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Placement Category</label>
    <type>Text</type>
</CustomField>