force-app/main/default/objects/Placement__c/fields/Invoice_To_Randstad_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Randstad_Account__c</fullName>
    <formula>TEXT(Latest_Opportunity__r.Invoice_To_Randstad_Account__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice To Randstad Account</label>
    <type>Text</type>
</CustomField>