force-app/main/default/objects/Placement__c/fields/IPC__c.field-meta.xml
<CustomField>
    <fullName>IPC__c</fullName>
    <label>IPC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>