force-app/main/default/objects/Placement__c/fields/Issue_In_QB__c.field-meta.xml
<CustomField>
    <fullName>Issue_In_QB__c</fullName>
    <formula>OR(QB_Invoices__c &lt;&gt; Total_Price__c, QB_Bills__c &lt;&gt;  Total_To_Pay__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue In QB?</label>
    <type>Checkbox</type>
</CustomField>