force-app/main/default/objects/Placement__c/fields/Last_LineItem__c.field-meta.xml
<CustomField>
    <fullName>Last_LineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last LineItem</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>Placements2</relationshipName>
    <type>Lookup</type>
</CustomField>