force-app/main/default/objects/Placement__c/fields/Latest_AE_Email__c.field-meta.xml
<CustomField>
    <fullName>Latest_AE_Email__c</fullName>
    <formula>Latest_Opportunity__r.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest AE Email</label>
    <type>Text</type>
</CustomField>