force-app/main/default/objects/Placement__c/fields/Latest_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Latest_Bill_Rate__c</fullName>
    <formula>Last_LineItem__r.Weekly_Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>