force-app/main/default/objects/Placement__c/fields/Latest_CSM_Email__c.field-meta.xml
<CustomField>
    <fullName>Latest_CSM_Email__c</fullName>
    <formula>Latest_Opportunity__r.Success_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest CSM Email</label>
    <type>Text</type>
</CustomField>