force-app/main/default/objects/Placement__c/fields/Latest_Hours_Week__c.field-meta.xml
<CustomField>
    <fullName>Latest_Hours_Week__c</fullName>
    <formula>IF(Internal_Placement__c&lt;&gt;NULL, Latest_Internal_Placement__r.Hours_Week__c,
Latest_Opportunity_Line_Item__r.Hours_Week__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Hours/Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>