force-app/main/default/objects/Placement__c/fields/Latest_Internal_Placement__c.field-meta.xml
<CustomField>
    <fullName>Latest_Internal_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Internal Placement</label>
    <referenceTo>Internal_Placement__c</referenceTo>
    <relationshipName>Placements1</relationshipName>
    <type>Lookup</type>
</CustomField>