force-app/main/default/objects/Placement__c/fields/Latest_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Placements1</relationshipName>
    <type>Lookup</type>
</CustomField>