force-app/main/default/objects/Placement__c/fields/Latest_Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Opportunity_Close_Date__c</fullName>
    <formula>Latest_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Opportunity Close Date</label>
    <type>Date</type>
</CustomField>