force-app/main/default/objects/Placement__c/fields/Latest_Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Latest_Opportunity_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Opportunity Line Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>