force-app/main/default/objects/Placement__c/fields/Latest_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Opportunity_Name__c</fullName>
    <formula>Latest_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Opportunity Name</label>
    <type>Text</type>
</CustomField>