force-app/main/default/objects/Placement__c/fields/Latest_Talent_rate__c.field-meta.xml
<CustomField>
    <fullName>Latest_Talent_rate__c</fullName>
    <formula>IF(Internal_Placement__c&lt;&gt;NULL,


IF( AND($Profile.Name != &apos;System Administrator&apos; , $User.Username !=&apos;tracy@torc.dev&apos;, $User.Username !=&apos;mike@torc.dev&apos;

),
0,
Internal_Placement__r.Weekly_Talent_Rate__c
)
,Last_LineItem__r.Weekly_Talent_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Talent rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>