force-app/main/default/objects/Placement__c/fields/Latest_Talent_Specialist_Email__c.field-meta.xml
<CustomField>
    <fullName>Latest_Talent_Specialist_Email__c</fullName>
    <formula>Latest_Opportunity__r.Talent_Specialist__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Talent Specialist Email</label>
    <type>Text</type>
</CustomField>