force-app/main/default/objects/Placement__c/fields/Latest_Time_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Latest_Time_Commitment__c</fullName>
    <formula>TEXT(Latest_Opportunity_Line_Item__r.Time_Commitment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Time Commitment</label>
    <type>Text</type>
</CustomField>