force-app/main/default/objects/Placement__c/fields/Main_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Main_Job_ID__c</fullName>
    <formula>Main_Opportunity__r.Job_Opportunity__r.External_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Job ID</label>
    <type>Text</type>
</CustomField>