force-app/main/default/objects/Placement__c/fields/Main_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Main_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>