force-app/main/default/objects/Placement__c/fields/Main_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Opportunity_Name__c</fullName>
    <formula>Main_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Opportunity Name</label>
    <type>Text</type>
</CustomField>