force-app/main/default/objects/Placement__c/fields/Member_Ready_To_Extend__c.field-meta.xml
<CustomField>
    <fullName>Member_Ready_To_Extend__c</fullName>
    <label>Member Ready To Extend?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>