force-app/main/default/objects/Placement__c/fields/Not_Extending__c.field-meta.xml
<CustomField>
    <fullName>Not_Extending__c</fullName>
    <formula>NOT(Possible_to_Extend__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Extending</label>
    <type>Checkbox</type>
</CustomField>