force-app/main/default/objects/Placement__c/fields/Placed_User_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Placed_User_Created_At__c</fullName>
    <formula>Torc_User__r.createdAt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placed User Created At</label>
    <type>Date</type>
</CustomField>