force-app/main/default/objects/Placement__c/fields/Placement_Count__c.field-meta.xml
<CustomField>
    <fullName>Placement_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>