force-app/main/default/objects/Placement__c/fields/Possible_to_Extend__c.field-meta.xml
<CustomField>
    <fullName>Possible_to_Extend__c</fullName>
    <formula>Latest_Opportunity__r.Possible_to_Extend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Possible to Extend</label>
    <type>Checkbox</type>
</CustomField>