force-app/main/default/objects/Placement__c/fields/QB_Bills__c.field-meta.xml
<CustomField>
    <fullName>QB_Bills__c</fullName>
    <label>QB Bills</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>