force-app/main/default/objects/Placement__c/fields/QB_Check_URL__c.field-meta.xml
<CustomField>
    <fullName>QB_Check_URL__c</fullName>
    <formula>HYPERLINK(&apos;/apex/QBPlacementCompare?id=&apos;+ Id , &apos;QB Check&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QB Check URL</label>
    <type>Text</type>
</CustomField>