force-app/main/default/objects/Placement__c/fields/Randstad_Direct_Indirect_Placement__c.field-meta.xml
<CustomField>
    <fullName>Randstad_Direct_Indirect_Placement__c</fullName>
    <formula>OR(
NOT(ISPICKVAL(Latest_Opportunity__r.Invoice_To_Randstad_Account__c,&apos;&apos;)),
Latest_Opportunity__r.Invoice_to_Randstad__c ,
Account__r.Name =&apos;Randstad North America Inc&apos;,
Account__r.Name =&apos;Randstad Sourceright Ltd&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RD Direct</label>
    <type>Checkbox</type>
</CustomField>