force-app/main/default/objects/Placement__c/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <formula>Torc_User__r.Referrer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Name</label>
    <type>Text</type>
</CustomField>