force-app/main/default/objects/Placement__c/fields/Talent_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Talent_Create_Date__c</fullName>
    <formula>Torc_User__r.createdAt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talent Create Date</label>
    <type>Date</type>
</CustomField>