force-app/main/default/objects/Placement__c/fields/Talent_Email__c.field-meta.xml
<CustomField>
    <fullName>Talent_Email__c</fullName>
    <formula>Torc_User__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talent Email</label>
    <type>Text</type>
</CustomField>