force-app/main/default/objects/Placement__c/fields/Talent_Name__c.field-meta.xml
<CustomField>
    <fullName>Talent_Name__c</fullName>
    <formula>Torc_User__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talent Name</label>
    <type>Text</type>
</CustomField>