force-app/main/default/objects/Placement__c/fields/Talent_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Talent_User_Name__c</fullName>
    <formula>Torc_User__r.userName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talent User Name</label>
    <type>Text</type>
</CustomField>