force-app/main/default/objects/Placement__c/fields/Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Torc_User__c</fullName>
    <label>Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipName>Placements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>