force-app/main/default/objects/Placement__c/fields/Torc_User_Contact__c.field-meta.xml
<CustomField>
    <fullName>Torc_User_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torc User Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>