force-app/main/default/objects/Placement__c/fields/Torc_User_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Torc_User_Contact_ID__c</fullName>
    <formula>Torc_User__r.SFDC_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Torc User Contact ID</label>
    <type>Text</type>
</CustomField>