force-app/main/default/objects/Placement__c/fields/Torc_user_Country__c.field-meta.xml
<CustomField>
    <fullName>Torc_user_Country__c</fullName>
    <formula>Torc_User__r.countryName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Torc User Country</label>
    <type>Text</type>
</CustomField>