force-app/main/default/objects/Placement__c/fields/Total_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_To_Pay__c</fullName>
    <label>Total To Pay</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>