force-app/main/default/objects/Placement__c/fields/User_name_With_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>User_name_With_Create_Date__c</fullName>
    <formula>Talent_Name__c +&apos;-&apos;+ TEXT(DATEVALUE(Torc_User__r.createdAt__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User name With Create Date</label>
    <type>Text</type>
</CustomField>