force-app/main/default/objects/Placement__c/fields/X1_5_Week_Check_In__c.field-meta.xml
<CustomField>
    <fullName>X1_5_Week_Check_In__c</fullName>
    <formula>First_Working_Day__c +9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1.5 Week Check In</label>
    <type>Date</type>
</CustomField>