force-app/main/default/objects/Placement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Torc_User__c</columns>
    <columns>Main_Opportunity__c</columns>
    <columns>Latest_Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Latest_Bill_Rate__c</columns>
    <columns>Latest_Talent_rate__c</columns>
    <columns>Exclude__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>